improve test cases